--- a/src/Product.css
+++ b/src/Product.css
@@ -5,9 +5,25 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    align-items: flex-start;
-    margin: 0 0 60px 0;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 30px 0;
     padding: 0 24px;
+}
+
+.product_card:after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -15px;
+    width: 100vw;
+    height: 2px;
+    background-color: #e6e6e6;
+}
+    
+.product_card:last-child:after {
+    content: none;
 }
 
 .product_image {
@@ -27,19 +43,38 @@
 }
 
 .product_title {
+    flex: 0 0 auto;
     font-weight: bold;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    line-clamp: 1;
-    -webkit-box-orient: vertical;
+    font-size: 14px;
+    color: #252525;
+}
+
+.product_weight {
+    flex: 0 0 auto;
+    font-size: 14px;
+    font-weight: lighter;
+    color: #777;
+
 }
 
 .product_detail {
     font-size: 11px;
+    font-weight: normal;
+    color: #777;
+}
+
+.multiple-line-break-2 {
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.multiple-line-break-3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
     -webkit-box-orient: vertical;
 }
