--- a/src/Shop.css
+++ b/src/Shop.css
@@ -14,17 +14,24 @@
     outline: none;
 }
 
+.categoriesNav {
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
 /* bootstrap sets a bolder style for ative links
 that break their alignement when selection change */
 .categoriesNav_link {
     font-weight: initial !important;
+    color: #252525;
 }
 
 .shop_info {
     flex: 0 0 auto;
     z-index: 1;
-    background-color: white;
+    background-color: #e6e6e6;
     padding: 12px 24px;
+    position: relative;
 }
 
 .shop_header {
@@ -33,7 +40,68 @@ that break their alignement when selection change */
     padding: 10px 0;
 }
 
+.shop_name {
+    font-weight: bolder;
+    margin-bottom: 0;
+    color: #252525;
+}
+
+.shop_backButton {
+    font-size: 22px;
+    margin-right: 10px;
+    color: #252525;
+}
+
+.shop_backButton:hover {
+    cursor: pointer;
+}
+
+.shop_address {
+    color: #252525;
+    text-decoration: none;
+}
+
+.shop_address:hover {
+    text-decoration: underline;
+}
+
+.shop_logo {
+    margin-right: 4px;
+}
+
 .products_list {
     flex: 1 0 100px;
     overflow-y: scroll;
 }
+
+
+/* gradient effect below nav */
+/* not necessary when product list has a brackground  */
+/* .shop_info:after {
+    content: "";
+    border-top: 1px solid #25252515;
+    background: linear-gradient(#25252515, transparent);
+    height: 8px;
+    bottom: -8px;
+    z-index: 10;
+    width: 100%;
+    left: 0px;
+    position: absolute; 
+} */
+
+/* fake search bar */
+/* .categoriesNav_search {
+    flex: 0 1 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    padding: 3px 7px 2px;
+    margin-left: auto;
+    border: 1px solid #252525;
+    border-radius: 15px;
+    max-width: 180px;
+}
+
+.bi-search {
+    color: #252525;
+} */
+
