--- a/src/Shop.css
+++ b/src/Shop.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
-    z-index: 1;
+    z-index: 10;
     top: 0;
     left: 0;
     width: 100%;
@@ -97,6 +97,9 @@ that break their alignement when selection change */
 .products_list {
     flex: 1 0 100px;
     overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 
